Fix links to previous steps and next steps

--- a/2_Sleep_EDF_Ext_visualization.ipynb
+++ b/2_Sleep_EDF_Ext_visualization.ipynb
@@ -45,7 +45,7 @@
         "  * **Studies used:**\n",
         "    * Sleep Cassette (SC) - the study on healthy people\n",
         "    * Sleep Telemetry (ST) - study on people diagnosed with mild insomnia.\n",
-        "* **Previos step**: [Download & organizate](https://github.com/CarmenTheodoraCraciun/ML-Sleep-Quality-Based-EEG-Signals/blob/main/1_Sleep_EDF_Ext_download.ipynb) the dataset\n",
+        "* **Previos step**: [Download & organizate](https://github.com/CarmenTheodoraCraciun/Sleep-Quality-Based-EEG-Signals/blob/main/1_Sleep_EDF_Ext_download.ipynb) the dataset\n",
         "* **Input**: The 4 folders with the EDF files created in the previous step.\n",
         "* **Output**: full_paths.csv - A csv containing the columns:\n",
         "    * id - the unique id of each patient in the study\n",
@@ -2599,7 +2599,7 @@
         "  * the SC study has more recordings than during sleep\n",
         "  * the SC study also has more channels than the ST\n",
         "\n",
-        "The next step in the pipeline is [**Extract, Tranform, Load**](https://colab.research.google.com/drive/1REGt22k8LiXCseev4EBROStRsDNQVaLT?usp=sharing)"
+        "The next step in the pipeline is [**Extract, Tranform, Load**](https://github.com/CarmenTheodoraCraciun/Sleep-Quality-Based-EEG-Signals/blob/main/3_Sleep_EDF_Ext_ETL.ipynb)"
       ],
       "metadata": {
         "id": "TqpxQAi-d0i0"
